Actualización sitio responsive
Ya no pude concluir pero avancé lo que pude por la asamblea

--- a/Responsive/index.html
+++ b/Responsive/index.html
@@ -24,16 +24,17 @@
             </a>
             <ul class="nav-menu">
                 <li class="nav-inicio">
-                    <a href="#">Inicio</a>
+                    
                 </li>
                 <li class="nav-productos">
-                    <a href="/Responsive/pages/Compras.html">Productos</a>
+                    <a href="/Responsive/pages/Product_to_Buy.html">Productos</a>
                 </li>
                 <li class="nav-tiendas">
-                    <a href="#">Tiendas</a>
+                    <!-- <a href="/Responsive/pages/Tiendas.html">Tiendas</a> -->
+                    <a href="/Responsive/pages/Compras.html">Tiendas</a>
                 </li>
                 <li class="nav-contacto">
-                    <a href="#">Contactos</a>
+                    <a href="/Responsive/pages/Contacto.html">Contactos</a>
                 </li>
             </ul>
        
