--- a/Responsive/pages/Compras.html
+++ b/Responsive/pages/Compras.html
@@ -21,10 +21,10 @@
                     <a href="/Responsive/index.html">INICIO</a>
                 </li>
                 <li class="nav-productos">
-                    <a href="/Responsive/pages/Compras.html">PRODUCTOS</a>
+                    <a href="/Responsive/pages/Product_to_Buy.html">PRODUCTOS</a>
                 </li>
                 <li class="nav-tiendas">
-                    <a href="#">TIENDAS</a>
+                    <a href="/Responsive/pages/Tiendas.html">TIENDAS</a>
                 </li>
                 <li class="nav-contacto">
                     <a href="#">CONTACTO</a>
@@ -47,57 +47,58 @@
         </div>
         <div class="caja c6">
             <div class="producto">
-                <img src="/Responsive/Media/deposito.jpg" alt="">
+                <img src="/Responsive/Media/ferr1.jpg" alt="">
+                
                 <button class="ver">
-                    Detalles
+                    Tienda Zona 1
                 </button>
             </div>
             <div class="producto">
-              <img src="/Responsive/Media/pegamento.jpg" alt="">
+              <img src="/Responsive/Media/ferr6.jpg" alt="">
               <button class="ver">
-                Detalles
+                Tienda Zona 2
             </button>
             </div>
             <div class="producto">
-              <img src="/Responsive/Media/caja.jpg" alt="">
+              <img src="/Responsive/Media/ferr2.jpg" alt="">
               <button class="ver">
-                Detalles
+                Tienda Zona 4
             </button>
             </div>
             <div class="producto">
-              <img src="/Responsive/Media/faro.jpg" alt="">
+              <img src="/Responsive/Media/ferr3.jpg" alt="">
               <button class="ver">
-                Detalles
+                Tienda Zona 6
             </button>
             </div>
             <div class="producto">
-              <img src="/Responsive/Media/compresor.jpg" alt="">
+              <img src="/Responsive/Media/ferr4.jpg" alt="">
               <button class="ver">
-                Detalles
+                Tienda Zona 7
             </button>
             </div>
             <div class="producto">
-              <img src="/Responsive/Media/contador.jpg" alt="">
+              <img src="/Responsive/Media/ferr5.jpg" alt="">
               <button class="ver">
-                Detalles
+                Tienda Zona 10
             </button>
             </div>
             <div class="producto">
-              <img src="/Responsive/Media/taladro.jpg" alt="">
+              <img src="/Responsive/Media/ferr7.jpg" alt="">
               <button class="ver">
-                Detalles
+                Tienda Zona 11
             </button>
             </div>
             <div class="producto">
-              <img src="/Responsive/Media/ladrillo.jpg" alt="">
+              <img src="/Responsive/Media/ferr8.jpg" alt="">
               <button class="ver">
-                Detalles
+                Tienda Zona 16
             </button>
             </div>
             <div class="producto">
-              <img src="/Responsive/Media/carreta.jpg" alt="">
+              <img src="/Responsive/Media/ferr9.jpg" alt="">
               <button class="ver">
-                Detalles
+                Tienda Zona 18
             </button>
             </div>
         </div>
