Add Styles and new views

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <div class="animación">
-        <p>Carrera <br><span>Full Stack</span></p>
+        <p>Software <br><span>Development</span></p>
         
         <div class="container">
             <div class="content">
@@ -26,29 +26,27 @@
     </div>
 <div class="elementos">
     <nav>
-        <h1 style="color: lawngreen;">Ejercicios HTML y CSS: </h1>
-        <li><a href="/Ejercicio_1.html">Ejercicio 01: Maquetación General</a></li>
-        <li><a href="/Ejercicio_2.html">Ejercicio 02: Diseños Maquetaciones</a></li>
-        <li><a href="/Ejercicio_3.html">Ejercicio 03: Selectores</a></li>
-        <li><a href="/Ejercicio_4.html">Ejercicio 04: Listas Elementos</a></li>
-        <li><a href="/Ejercicio_5.html">Ejercicio 05: Listas Sombreados</a></li>
-        <li><a href="/Ejercicio_6.html">Ejercicio 06: Modelos Cajas 1</a></li>
-        <li><a href="/Ejercicio_7.html">Ejercicio 07: Modelos Cajas 2</a></li>
-        <li><a href="/Ejercicio_8.html">Ejercicio 08: Selectores 1</a></li>
-        <li><a href="/Ejercicio_9.html">Ejercicio 09: Maquetación Formularios</a></li>
-        <li><a href="/Ejercicio_10.html">Ejercicio 10: Selectores 2</a></li>
-        <li><a href="/Ejercicio_11.html">Ejercicio 11: Selectores Avanzados 1</a></li>
-        <li><a href="/Ejercicio_12.html">Ejercicio 12: Selectores Avanzados 2</a></li>
-        <li><a href="/Ejercicio_13.html">Ejercicio 13: Imagenes</a></li>
-        <li><a href="/Ejercicio_14.html">Ejercicio 14: Tranciciones 1</a></li>
-        <li><a href="/Ejercicio_15.html">Ejercicio 15: Tranciciones 2</a></li>
-        <li><a href="/Ejercicio_16.html">Ejercicio 16: Pokeball</a></li>
-        <li><a href="/Ejercicio_17.html">Ejercicio 17: Sistema Solar</a></li>
-        <li><a href="/Ejercicio_18.html">Ejercicio 18: Animaciones</a></li>
-        <li><a href="/Ejercicio_19.html">Ejercicio 19: Reflejo</a></li>
-        <li><a href="/Ejercicio_20.html">Ejercicio 20: Tienda de dispositivos eléctricos</a></li>
-        <br>
-        <li><a href="/html/pages/Login.html">Tienda de ropa (Proyecto)</a></li>
+        <h1 style="color: lawngreen;">Ejercicios Básicos HTML y CSS: </h1>
+        <li><a href="/Ejercicios_HTML/Ejercicio_1.html">Ejercicio 01: Maquetación General</a></li>
+        <li><a href="/Ejercicios_HTML/Ejercicio_2.html">Ejercicio 02: Diseños Maquetaciones</a></li>
+        <li><a href="/Ejercicios_HTML/Ejercicio_3.html">Ejercicio 03: Selectores</a></li>
+        <li><a href="/Ejercicios_HTML/Ejercicio_4.html">Ejercicio 04: Listas Elementos</a></li>
+        <li><a href="/Ejercicios_HTML/Ejercicio_5.html">Ejercicio 05: Listas Sombreados</a></li>
+        <li><a href="/Ejercicios_HTML/Ejercicio_6.html">Ejercicio 06: Modelos Cajas 1</a></li>
+        <li><a href="/Ejercicios_HTML/Ejercicio_7.html">Ejercicio 07: Modelos Cajas 2</a></li>
+        <li><a href="/Ejercicios_HTML/Ejercicio_8.html">Ejercicio 08: Selectores 1</a></li>
+        <li><a href="/Ejercicios_HTML/Ejercicio_9.html">Ejercicio 09: Maquetación Formularios</a></li>
+        <li><a href="/Ejercicios_HTML/Ejercicio_10.html">Ejercicio 10: Selectores 2</a></li>
+        <li><a href="/Ejercicios_HTML/Ejercicio_11.html">Ejercicio 11: Selectores Avanzados 1</a></li>
+        <li><a href="/Ejercicios_HTML/Ejercicio_12.html">Ejercicio 12: Selectores Avanzados 2</a></li>
+        <li><a href="/Ejercicios_HTML/Ejercicio_13.html">Ejercicio 13: Imagenes</a></li>
+        <li><a href="/Ejercicios_HTML/Ejercicio_14.html">Ejercicio 14: Tranciciones 1</a></li>
+        <li><a href="/Ejercicios_HTML/Ejercicio_15.html">Ejercicio 15: Tranciciones 2</a></li>
+        <li><a href="/Ejercicios_HTML/Ejercicio_16.html">Ejercicio 16: Pokeball</a></li>
+        <li><a href="/Ejercicios_HTML/Ejercicio_17.html">Ejercicio 17: Sistema Solar</a></li>
+        <li><a href="/Ejercicios_HTML/Ejercicio_18.html">Ejercicio 18: Animaciones</a></li>
+        <li><a href="/Ejercicios_HTML/Ejercicio_19.html">Ejercicio 19: Reflejo</a></li>
+        <li><a href="/Ejercicios_HTML/Ejercicio_20.html">Ejercicio 20: Tienda de dispositivos eléctricos</a></li>
         <br>
         <h1 style="color: darkorange;">Ejercicios JS, CSS y HTML: </h1>
         <li><a href="/JS_Ejercicios/Ejercicio_1.html">Ejercicio 01: Estructura condicional sencilla "if else" 1</a></li>
@@ -90,10 +88,28 @@
         <li><a href="/Eventos_JS/Ejercicio_5.html">Ejercicio 05: Evento select() con DOM HTML y addEventListener</a></li>
         <li><a href="/Eventos_JS/Ejercicio_6.html">Ejercicio 06: Evento Onsubmit() con DOM HTML y addEventListener</a></li>
         <br>
+        <h1 style="color: skyblue;">Mini Proyectos: </h1>
         <li><a href="/Eventos_JS/Caluculadora.html">Calculadora: Eventos JavaScript</a></li>
         <li><a href="/Eventos_JS/Reloj.html">Reloj: Eventos JavaScript</a></li>
         <li><a href="/Eventos_JS/Fecha.html">Fecha: Eventos JavaScript</a></li>
         <li><a href="/Eventos_JS/Calendario.html">Calendario: Eventos JavaScript</a></li>
+        <br>
+        <h1 style="color: rgb(214, 200, 6);">Aplicaciónes Web HTML,PHP,BD: </h1>
+        <li><a href="/html/pages/Login.html">Tienda de ropa</a></li>
+        <li><a href="/Sitio_Restaurante_Las_Delicias/index.html">Restaurante "Las delicias"</a></li>
+        <li><a href="/Responsive/index.html">Ferretería "ElecDom"</a></li>
+        <br>
+        <h1 style="color: rgb(223, 45, 45);">Consumo de APIs: </h1>
+        <li><a href="/API/RickYMorty.html">API de Rick y Morty</a></li>
+        <li><a href="/API/Caso_2.html">API de Gatos</a></li>
+        <li><a href="/API/Caso_2.html">API The Movie Database</a></li>
+        <br>
+        <h1 style="color: rgb(46, 255, 39);">Sistemas Web: </h1>
+        <li><a href="https://github.com/jgaliano/Proyecto_Fullstack_Hotel_Los_Sue-os">Sistema Empresarial "Hotel Los Sueños" | PHP, HTML, Bootstrap, y MySQL </a></li>
+        <li><a href="https://github.com/jgaliano/Club_Nautico">Registro de Actividades de Club Náutico" | PHP, HTML, Bootstrap, y MySQL </a></li>
+        <li><a href="https://github.com/jgaliano/Examen_Desarrollo">Control Empresarial de Personal | Python, Django, HTML, Bootstrap, y MySQL </a></li>
+        <br>
+        <h1 style="color: rgb(255, 153, 28);">Aplicaciónes Android: </h1>
     </nav>
     <footer style="text-align: center;">Copyright © Todos los derechos reservados - Desarrollado por Jhonatan Galiano - 2023</footer>  
     <br>
