Actualización de ruta de api TMDB
Se ralizó la actualización en el archivo local too

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <h1 style="color: rgb(223, 45, 45);">Consumo de APIs: </h1>
         <li><a href="/API/RickYMorty.html">API de Rick y Morty</a></li>
         <li><a href="/API/Caso_2.html">API de Gatos</a></li>
-        <li><a href="/API/Caso_2.html">API The Movie Database</a></li>
+        <li><a href="/API/TMDB_for.html">API The Movie Database</a></li>
         <br>
         <h1 style="color: rgb(46, 255, 39);">Sistemas Web: </h1>
         <li><a href="https://github.com/jgaliano/Proyecto_Fullstack_Hotel_Los_Sue-os">Sistema Empresarial "Hotel Los Sueños" | PHP, HTML, Bootstrap, y MySQL </a></li>
